# CodeRetina

./: .gitignore  26寒假清华历史模拟卷.docx  PLAN.md  README.md  REPORT.md  配套答案.docx
docs/: 00_arch_review.md  01_vision_agents_inventory.md  02_sidecar_protocol.md  sprint_5_agentic_summary.md  sprint_5_skill_discovery_summary.md  sprint_6_video_summary.md  sprint_7_doc_summary.md  sprint_7_planning_summary.md
eval/: run.py
eval/results/: full_report.json  full_report.md  report.json  report.md
scripts/: demo_sprint1.sh  demo_sprint2.sh  demo_sprint3.sh  demo_sprint4.sh  demo_sprint5_skill_discovery.sh  demo_sprint6.sh  demo_sprint7.sh  demo_sprint7_planning.sh  download_models.sh  gui_sandbox.sh  make_poster.py  make_poster_demo_figure.py  test_agentic_qa.py
src/: entry.ts
src/services/: sessionRecorder.ts
src/skills/: loadSkillsDir.ts
src/tools/: GUIAgentTool.ts  VisionMemorySearchTool.ts
src/utils/: gracefulShutdown.ts
src/vision/: agentic.ts  (+3 more)
tests/: README.md  run_tests.py
vision_sidecar/: README.md  pyproject.toml  run.py
vision_sidecar/vision_sidecar/: __init__.py  registry.py  server.py
vision_sidecar/vision_sidecar/methods/: __init__.py  chart_table.py  detect.py  doc.py  embed.py  gui.py  gui_agent.py  rag.py  register_all.py  video.py  vlm.py  vlm_agentic.py  vlm_agentic_utils.py  vlm_real.py  yolo_detect.py
vision_sidecar/vision_sidecar/methods/gui_planner/: planner.py
vision_sidecar/vision_sidecar/methods/gui_planner/prompts/: judge.md  predict.md  propose.md
vision_sidecar/vision_sidecar/prompts/: agentic_qa.txt  agentic_qa_schema.json
(+37 files in other folders)
