[project]
name = "vision-sidecar"
version = "0.1.0"
description = "Python sidecar for CodeRetina —— 视觉处理服务"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 核心依赖
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
    
    # VLM 模型
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
    
    # 视觉处理
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",  # YOLO
    
    # 工具
    "tqdm>=4.65.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# 可选：OmniParser 支持
omniparser = [
    " groundingdino-py>=0.4.0",
    " supervision>=0.18.0",
]

# 可选：向量嵌入
embeddings = [
    "sentence-transformers>=2.2.0",
    "lancedb>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
